ArrayList => LinkList need to get first and last item, better usage